<resources>
    <string name="app_name">Assignment1</string>
    <string name="False">False</string>
    <string name="True">True</string>
    <string name="Next">Next</string>
    <string name="Question">Question</string>
    <string name="Cheat">Let us Cheat</string>
    <string name="Hint">Show Hint</string>
    <string name="mCheat">Cheat</string>
    <string name="mHint">Hint</string>
</resources>
