<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute, AndroidUnknownAttribute, AndroidUnknownAttribute -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/Background"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="in.ac.iiitd.kunal.assignment1.MainActivity">
    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/textViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Question"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingBottom="30dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">
        <!--suppress AndroidUnknownAttribute, AndroidUnknownAttribute -->
        <Button
            android:id="@+id/TrueButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/True"
            android:textSize="20sp"
            android:drawableLeft="@drawable/right"
            tools:ignore="RtlHardcoded" />
        <!--suppress AndroidUnknownAttribute, AndroidUnknownAttribute -->
        <Button
            android:id="@+id/FalseButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/False"
            android:drawableRight="@drawable/cross"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
    <!--suppress AndroidUnknownAttribute, AndroidUnknownAttribute -->
    <Button
        android:id="@+id/next_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:drawableRight="@drawable/next"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/HintButton"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mHint"
            android:drawableRight="@drawable/Hint"
            android:drawableEnd="@drawable/Hint"
            android:drawablePadding="5dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/CheatButton"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:drawableRight="@drawable/Cheat"
            android:drawableEnd="@drawable/Cheat"
            android:drawablePadding="5dp"
            android:layout_height="wrap_content"
            android:text="@string/mCheat"
            android:textSize="20sp"
            />

    </LinearLayout>

</LinearLayout>
